# Python package defnition file

# See: Python Packaging User Guide
# https://packaging.python.org/en/latest/

# Django: How to write reusable apps
# https://docs.djangoproject.com/en/5.1/intro/reusable-apps/

# Related files:
# - requirements.txt lists the dependencies
# - MANIFEST.in includes or excludes other files from the package
# - README.md describes the package

[build-system]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]

[project]
name = "SORT"
version = "0.0.1"
readme = "README.md"
# https://devguide.python.org/versions/
requires-python = ">= 3.10"
authors = [
    { name = "Farhad Allian", email = "farhad.allian@sheffield.ac.uk" },
    { name = "Twin Karmakharm", email = "t.karmakharm@sheffield.ac.uk" },
    { name = "Joe Heffer", email = "j.heffer@sheffield.ac.uk" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
# Get dependencies from requirements.txt
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
